--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-      <form class="add-toy-form">
+      <form class="add-toy-form" >
         <h3>Create a toy!</h3>
 
         <input
@@ -45,7 +45,9 @@
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
 
-    <div id="toy-collection"></div>
+    <div id="toy-collection">
+
+    </div>
     <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
